# JapaneseKeyboard

./: .gitignore  .gitmodules  ENGLISH_DICTIOANRY_LICENSE  LICENSE  README.md  SECURITY.md  build.gradle  gradle.properties  local.properties  settings.gradle
.github/ISSUE_TEMPLATE/: バグ報告---bug-report.md  機能リクエスト---feature-request.md
.github/workflows/: android.yml  system-ngram-performance.yml  up-to-date.yml
app/: build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/src/debug/: AndroidManifest.xml
app/src/full/: AndroidManifest.xml
app/src/liteFdroid/res/values/: strings.xml
app/src/liteFdroid/res/values-ja/: strings.xml
app/src/liteStandard/res/values/: strings.xml
app/src/liteStandard/res/values-ja/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/mozc/: node_attribute_manifest.json  segmenter_manifest.json
app/src/main/baselineProfiles/: baseline-prof.txt
app/src/main/res/drawable/: baseline_forward_24.xml  english_small.xml  enter_key_bg.xml  gemma_action_spinner_background.xml  gemma_audio_24.xml  gemma_image_24.xml  henkan.xml  ic_gemma_panel_close.xml  kana_small.xml  logo_key.xml  more_horiz_24px.xml  number_small.xml  open_bracket.xml  selector_corner_bottom_right.xml  shortcut_toolbar_delete_background.xml  tablet_keyboard_center_bg.xml  ten_keys_center_bg.xml  ten_keys_side_bg.xml
app/src/main/res/font/: roboto.xml
app/src/main/res/layout/: activity_add1.xml  activity_add2.xml  activity_add3.xml  activity_delete1.xml  activity_delete2.xml  activity_delete3.xml  activity_delete4.xml  activity_gemma_media_action.xml  activity_main.xml  activity_new1.xml  activity_new2.xml  activity_new3.xml  activity_reset1.xml  activity_reset2.xml  activity_reset3.xml  activity_reset4.xml  activity_welcome.xml  database.xml  dialog_custom_zero_query_entry.xml  dialog_edit_gemma_prompt_template.xml  dialog_edit_learn_entry.xml  dialog_edit_ng_word.xml  dialog_edit_romaji_map.xml  dialog_edit_romaji_pair.xml  dialog_edit_system_user_dictionary_entry.xml  dialog_edit_text.xml  dialog_edit_word.xml  dialog_long_press_timeout_preference.xml  dialog_ngram_rule_editor.xml  dialog_ngram_word_search.xml  dialog_show_image.xml  dialog_system_user_dictionary_context_id_picker.xml  emoji_kigou_item_layout.xml  floating_candidate_layout.xml  floating_candidate_list_item_pager.xml  floating_candidate_list_item_string.xml  floating_keyboard_layout.xml  fragment_candidate_height_landscape_setting.xml  fragment_candidate_order_override.xml  fragment_candidate_tab_order.xml  (+112 more)
app/src/main/res/layout-land/: keyboard_layout.xml  kigou_main_layout.xml  main_layout.xml
app/src/main/res/layout-sw600dp/: main_layout.xml  tablet_layout.xml  tablet_main_layout.xml
app/src/main/res/menu/: bottom_nav_menu.xml  clipboard_history_menu.xml  custom_zero_query_dictionary_menu.xml  custom_zero_query_group_menu.xml  dictionary_menu.xml  external_dictionary_menu.xml  fragment_reset_menu.xml  keyboard_list_menu.xml  keyboard_selection_menu.xml  learn_dictionary_menu.xml  legacy_setting_search_menu.xml  menu_keyboard_editor.xml  menu_keyboard_settings.xml  menu_list_item.xml  ng_word_menu.xml  ngram_rule_menu.xml  romaji_map_menu.xml  setting_home_switch_menu.xml  system_user_dictionary_builder_menu.xml  user_dictionary_menu.xml  user_template_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/raw/: keyboard_layout_japanese_106.kcm  keyboard_layout_japanese_109a.kcm
app/src/main/res/values/: arrays.xml  colors.xml  dimen.xml  ic_launcher_background.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-ja/: arrays.xml  strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-sw600dp/: strings.xml
bl/: build.gradle
core/: build.gradle  consumer-rules.pro
custom_keyboard/: build.gradle  consumer-rules.pro
docs/: custom-key-special-key-icon-color-design.md  fast-input-fix-validation-2026-07-23.md  fdroid-release.md  flick-selected-long-press-yoon-design.md  ime-service-refactoring-design.md  japanese-bunsetsu-phase0-2.md  ngram-performance-report-2026-07-11.md  ngram-rule-4-5-node-design.md  omission-flick-typo-performance-report-2026-07-11.md  system-ngram-performance-2026-07-12.tsv  system-ngram-performance-report-2026-07-12.md  type-null-input-behavior-manual-check.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ja/: full_description.txt
fastlane/metadata/android/ja-JP/: full_description.txt  short_description.txt  title.txt
fastline/metadata/android/en-US/: short_description.txt
fastline/metadata/android/ja/: short_description.txt
fdroid/metadata/: com.kazumaproject.markdownhelperkeyboard.lite.fdroid.yml
flexbox/: build.gradle  proguard-rules.txt
gradle/wrapper/: gradle-wrapper.properties
openwnn/: build.gradle
qwerty_keyboard/: build.gradle  consumer-rules.pro
symbol_keyboard/: build.gradle  consumer-rules.pro
tabletkey/: build.gradle  consumer-rules.pro  proguard-rules.pro
tenkey/: build.gradle  consumer-rules.pro  proguard-rules.pro
tools/: generate_mozc_segmenter_data.py
tools/mozc_segmenter/: boundary.def
tools/mozc_segmenter_assets/: generate_mozc_segmenter_assets.py
tools/system_ngram/: generate_stress_rules.py
zenz/: build.gradle
zenz/scripts/: prepare_zenz_model.sh
zenz/src/main/cpp/: CMakeLists.txt  zenz_bridge.cpp
(+1423 files in other folders)
